--- a/arch/arm/configs/xilinx_zynq_defconfig
+++ b/arch/arm/configs/xilinx_zynq_defconfig
@@ -23,7 +23,7 @@ CONFIG_ARM_ERRATA_754322=y
 CONFIG_ARM_ERRATA_754327=y
 CONFIG_ARM_ERRATA_764369=y
 CONFIG_ARM_ERRATA_775420=y
-CONFIG_SMP=y
+CONFIG_SMP=n
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
 CONFIG_HIGHMEM=y
